log/2021-05-09T13:25:53+0800.log
Autotest: Begin at 2021年 05月 09日 星期日 13:25:53 CST
[32m[ found your pageReplace.cpp ][0m
pageReplace.cpp: In function 'void qry(long int*, int)':
pageReplace.cpp:8:19: error: 'r' was not declared in this scope
         if(pp[i]==r){t[i]=j;return;}
                   ^
pageReplace.cpp:11:13: error: 'r' was not declared in this scope
     pp[old]=r;t[old]=j-M;
             ^
make: *** [main] Error 1
[31m[01m[ compile error ][0m
[33m[01m[ You got 0 (of 100) this time. 2021年 05月 09日 星期日 13:25:55 CST ][0m
